src/objects/inscor__PO_Issue__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Date_Issued__c</fullName>
        <description>Date Issued</description>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Date_Restocked__c</fullName>
        <description>Date Restocked</description>
        <label>Date Restocked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Line</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>PO Issues</relationshipLabel>
        <relationshipName>PO_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Market_Value__c</fullName>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PO Issues</relationshipLabel>
        <relationshipName>PO_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>PO Issues</relationshipLabel>
        <relationshipName>PO_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipLabel>PO Issues</relationshipLabel>
        <relationshipName>PO_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Issued__c</fullName>
        <label>Quantity Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Not_Issued__c</fullName>
        <formula>inscor__Quantity_to_Issue__c - inscor__Quantity_Issued__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Not Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Restocked__c</fullName>
        <label>Quantity Restocked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_to_Issue__c</fullName>
        <label>Quantity to Issue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_to_Restock__c</fullName>
        <formula>inscor__Quantity_to_Issue__c - inscor__Quantity_Issued__c - inscor__Quantity_Restocked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity to Restock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Release_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Line</label>
        <referenceTo>inscor__Release_Line__c</referenceTo>
        <relationshipLabel>PO Issues</relationshipLabel>
        <relationshipName>PO_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>In Picking</fullName>
                </value>
                <value>
                    <fullName>Picked</fullName>
                </value>
                <value>
                    <fullName>In QC</fullName>
                </value>
                <value>
                    <fullName>QCd</fullName>
                </value>
                <value>
                    <fullName>In Shipping</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Ready to Issue</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Restocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PO Issue</label>
    <nameField>
        <displayFormat>POI-{0}</displayFormat>
        <label>PO Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>